# conditions

./: .gitignore  .npmignore  Cargo.toml  fix-pkg.js  package-lock.json  package.json  test.js
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  pr.yml
src/: lib.rs
