[package]
name = "conditions"
version = "0.2.0"
edition = "2021"
description = "WASM compatible if parser for PufferPanel"
repository = "https://github.com/PufferPanel/conditions"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"
rhai = { version = "*", features = ["std", "wasm-bindgen"] }
getrandom = { version = "*", features = ["js"] }
console_error_panic_hook = "*"
js-sys = "*"